tests/data/custom-http-errors/standard/custom-http-errors-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: custom-http-errors-ingress
  annotations:
    nginx.org/custom-http-errors: "404, 502, 5xx"
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: error-pages-svc
      port:
        number: 80
  rules:
  - host: custom-http-errors.example.com
    http:
      paths:
      - path: /backend1
        pathType: Prefix
        backend:
          service:
            name: backend1-svc
            port:
              number: 80
      - path: /fail
        pathType: Prefix
        backend:
          service:
            name: fail-backend-svc
            port:
              number: 80
